added timer button functionality. TODO: make increaseTimer not reset, make pausePlay work

--- a/CookPal/app/src/main/res/layout/activity_assistant.xml
+++ b/CookPal/app/src/main/res/layout/activity_assistant.xml
@@ -114,7 +114,8 @@
                         android:id="@+id/assistant_addTimeButton"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/assistant_add_time_icon"/>
+                        android:src="@drawable/assistant_add_time_icon"
+                        android:onClick="increaseTimer"/>
 
                     <ImageButton
                         android:id="@+id/assistant_playPauseButton"
@@ -122,7 +123,8 @@
                         android:layout_height="50dp"
                         android:src="@drawable/assistant_play_icon"
                         android:layout_marginLeft="20dp"
-                        android:layout_toRightOf="@id/assistant_addTimeButton"/>
+                        android:layout_toRightOf="@id/assistant_addTimeButton"
+                        android:onClick="pauseResumeTimer"/>
 
                     <ImageButton
                         android:id="@+id/assistant_nextStepButton"
