--- a/CookPal/app/src/main/res/layout/add_recipe_instruction_entry.xml
+++ b/CookPal/app/src/main/res/layout/add_recipe_instruction_entry.xml
@@ -22,6 +22,51 @@
             android:id="@+id/add_recipe_instruction_step"
             android:password="false"
             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title: "
+            android:textColor="@color/white"
+            android:id="@+id/titleTextView"
+            android:layout_marginLeft="10dp"
+            />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/add_recipe_instruction_title_edit"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:background="@drawable/view_border_light_orange_sm"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:padding="5dp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description: "
+            android:textColor="@color/white"
+            android:id="@+id/descTextView"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="5dp">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,11 +75,12 @@
             android:layout_gravity="center_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:background="@drawable/view_border_light_orange_sm"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:padding="5dp"
             />
     </LinearLayout>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -101,7 +147,7 @@
             android:layout_gravity="center_vertical"
             android:background="@android:color/transparent"
             android:scaleType="fitXY"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="8dp"
             />
     </LinearLayout>
 </LinearLayout>
