--- a/CookPal/app/src/main/res/layout/activity_edit_recipe.xml
+++ b/CookPal/app/src/main/res/layout/activity_edit_recipe.xml
@@ -134,10 +134,11 @@
                     android:layout_gravity="center_vertical"/>
             </LinearLayout>
 
-            <ListView
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:id="@+id/ingredientsEditListView"
+                android:id="@+id/ingredientsEditLinearLayout"
                 android:layout_weight="1"
                 android:divider="@null"
                 android:dividerHeight="0dp"
@@ -183,10 +184,11 @@
                     android:layout_gravity="center_vertical"/>
             </LinearLayout>
 
-            <ListView
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:id="@+id/instructionsEditListView"
+                android:id="@+id/instructionsEditLinearLayout"
                 android:layout_weight="1"
                 android:divider="@null"
                 android:dividerHeight="0dp"
