--- a/CookPal/app/src/main/res/layout/editrecipeinstruction_listview_entry.xml
+++ b/CookPal/app/src/main/res/layout/editrecipeinstruction_listview_entry.xml
@@ -7,11 +7,6 @@
     android:padding="5dp"
     android:layout_gravity="left|top">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,21 +26,14 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:padding="5dp"/>
-    </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="5dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Estimated cooking time: "
             android:textColor="@color/white"
-            android:id="@+id/timeTextView"
+            android:id="@+id/cookTimeTextView"
             />
 
         <EditText
@@ -99,5 +87,4 @@
             android:scaleType="fitXY"
             android:layout_marginLeft="10dp"
             />
-    </LinearLayout>
 </LinearLayout>
