--- a/CookPal/app/src/main/res/layout/editrecipeingredient_listview_entry.xml
+++ b/CookPal/app/src/main/res/layout/editrecipeingredient_listview_entry.xml
@@ -42,7 +42,8 @@
         android:background="@drawable/view_border_light_orange_sm"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="10dp"
-        android:padding="5dp"/>
+        android:padding="5dp"
+        android:text="0"/>
 
     <ImageButton
         android:layout_width="30dp"
