--- a/CookPal/app/src/main/res/menu/assistant.xml
+++ b/CookPal/app/src/main/res/menu/assistant.xml
@@ -5,4 +5,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/exitAssistantButton"
+        android:icon="@drawable/exit_assistant"
+        android:title="Exit current recipe"
+        android:showAsAction="ifRoom" />
 </menu>
