added start assistant button and functionality

--- a/CookPal/app/src/main/res/layout/directions_tab.xml
+++ b/CookPal/app/src/main/res/layout/directions_tab.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:id="@+id/directions_tab_listview">
+    android:orientation="vertical">
+
+
+    <ListView
+        android:id="@+id/directions_tab_listview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="60dp"
+        android:orientation="vertical">
 
 
 
+    </ListView>
+    <ImageButton
+        android:id="@+id/start_assistant_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/start_assistant_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@android:color/transparent"
+        android:onClick="startAssistantClicked"/>
 
-</ListView>
+</RelativeLayout>
