--- a/CookPal/app/src/main/res/layout/assistant_recipe_listview_entry.xml
+++ b/CookPal/app/src/main/res/layout/assistant_recipe_listview_entry.xml
@@ -11,20 +11,37 @@
         android:scaleType="fitXY"
         android:alpha=".7"
         />
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/assistantRecipeTitle"
-        android:layout_centerVertical="true"
-        android:gravity="center_vertical"
-        android:textColor="@color/white"
-        android:background="@color/green"
-        android:layout_marginLeft="2dp"
-        android:textSize="16dp"
-        android:padding="10dp"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
-        android:maxLines="1"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Start Assistant"
+            android:src="@drawable/assistant_play_icon"
+            android:id="@+id/assistantPlayButton"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:background="@color/green"/>
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:id="@+id/assistantRecipeTitle"
+            android:layout_toLeftOf="@id/assistantPlayButton"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:textColor="@color/white"
+            android:background="@color/green"
+            android:textSize="16dp"
+            android:padding="10dp"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
 </RelativeLayout>
