--- a/CookPal/app/src/main/res/layout/recipe_listview_entry.xml
+++ b/CookPal/app/src/main/res/layout/recipe_listview_entry.xml
@@ -40,8 +40,7 @@
             android:id="@+id/editRecipeButton"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:background="@color/green"
-            android:layout_marginLeft="2dp"/>
+            android:background="@color/light_green"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -53,7 +52,6 @@
             android:gravity="center_vertical"
             android:textColor="@color/white"
             android:background="@color/green"
-            android:layout_marginLeft="2dp"
             android:textSize="16dp"
             android:padding="10dp"
             android:scrollHorizontally="true"
