--- a/CookPal/app/src/main/res/menu/assistant.xml
+++ b/CookPal/app/src/main/res/menu/assistant.xml
@@ -1,12 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="cse190.cookpal.AssistantActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
     <item android:id="@+id/exitAssistantButton"
-        android:icon="@drawable/exit_assistant"
+        android:icon="@drawable/exit_icon"
         android:title="Exit current recipe"
         android:showAsAction="ifRoom" />
 </menu>
