--- a/CookPal/app/src/main/res/layout/recipe_listview_entry.xml
+++ b/CookPal/app/src/main/res/layout/recipe_listview_entry.xml
@@ -30,7 +30,8 @@
             android:textSize="0sp"
             android:textColor="@color/white"
             android:background="@color/light_green"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:onClick="checkSelected"/>
 
         <ImageButton
             android:layout_width="wrap_content"
