--- a/CookPal/app/src/main/res/menu/recipelist_activity_menu.xml
+++ b/CookPal/app/src/main/res/menu/recipelist_activity_menu.xml
@@ -5,7 +5,8 @@
     <item android:id="@+id/deleteGroceryListButton"
         android:icon="@drawable/delete_icon"
         android:title="Delete Recipe"
-        android:showAsAction="ifRoom" />
+        android:showAsAction="ifRoom"
+        android:visible="false"/>
     <item android:id="@+id/addGroceryListButton"
         android:icon="@drawable/add_icon"
         android:title="Add Recipe"
