fixed some colors

--- a/CookPal/app/src/main/res/values/colors.xml
+++ b/CookPal/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="blue">#6EAAAA</color>
     <color name="green">#97B764</color>
     <color name="light_green">#a6d370</color>
-    <color name="orange">#f6ad54</color>
-    <color name="light_orange">#fbc099</color>
+    <color name="orange">#f5a440</color>
+    <color name="light_orange">#f8b385</color>
     <color name="sa_green">#14a804</color>
     <color name="stacked_green">#118504</color>
     <color name="accent_green">#97e08f</color>
